team domain finish (not test yet, add constraint unique team members in Team entity